--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class=" hero-section">
         <div class="top-header">
             <div class="logo">
-                <h3>SELIM <span>HOSSAIN </span></h3>
+                <h3>SELIM <span class=" hi">HOSSAIN </span></h3>
             </div>
             <div class="menu">
                 <a href="#">Home</a>
@@ -31,15 +31,123 @@
 
             </div>
         </div>
+        <div class="midil-section">
+            <div class="midil-text">
+                <p> Hello , I am</p>
+                <h1>Selim Hossaine</h1>
+                <p> And i am web-developer</p>
+
+                <div>
+                    <a href=" #" class=" btn">HEAR ME</a>
+                </div>
+            </div>
+            <div class="midil-img">
+                <img src="img/my-bg.png" alt="">
+            </div>
+        </div>
 
     </header>
+    <!--  hero section end-->
 
-</body>
+    <!--  about section start-->
+    <section class=" About-section">
+        <div class="section-info">
+            <h1> About </h1>
+            <p> Who I Am ?</p>
+        </div>
+        <div class="about-row">
+            <div class="about-left">
+                <img src=" img/my-bg2.png" alt="">
+            </div>
+            <div class="about-right">
+                <h1> Hi , I'm selim .<span class=" hi">I'am profational web-developer . </span></h1>
+                <P> Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    A autem ipsam maxime modi corrupti obcaecati eum nisi quisquam odio odit mollitia quibusdam
+                    non, quia magnam temporibus praesentium omnis id deserunt?
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur
+                    adipisicing elit.
+                    A autem ipsam maxime modi corrupti obcaecati eum nisi quisquam odio odit mollitia quibusdam
+                    non, quia magnam temporibus praesentium omnis id deserunt?
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit
+                    A autem ipsam maxime modi corrupti obcaecati eum nisi quisquam odio odit mollitia quibusdam
+                    non, quia magnam temporibus praesentium omnis id deserunt?</P>
+                <a href=" #" class=" btn">Downlod CV</a>
+            </div>
+        </div>
 
-<title>Document</title>
-</head>
+    </section>
+    <!-- about section end-->
 
-<body>
+
+    <!-- Skill section-->
+    <section class=" skill-section">
+        <div class="section-info">
+            <h1 style="color:white"> Skill's </h1>
+            <p> Who I Am ?</p>
+        </div>
+
+        <div class="skill-midil">
+            <div class="slill-left">
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat deleniti possimus nostrum.
+                    Corrupti, inventore aliquid exercitationem enim atque eius, accusamus architecto natus dolores sunt
+                    alias, officia voluptatibus molestias aut vitae! Lorem ipsum, dolor sit amet consectetur adipisicing
+                    elit. Pariatur quod deserunt iusto enim sunt voluptate ullam, exercitationem sequi autem id? Maxime
+                    aut ipsa commodi sunt quasi odio expedita saepe facere!</p>
+                <a href="#" class="btn"> Read more</a>
+            </div>
+            <div class="slill-right">
+
+                <div class="progrse-div">
+                    <p>
+                        <span> HTMl</span>
+                        <progress id="file" value="80" max="100"> 80%</progress>
+                        <span> 80%</span>
+                    </p>
+                </div>
+
+                <div class="progrse-div">
+                    <p>
+                        <span class=" h"> css</span>
+                        <progress id="file" value="75" max="100"> 80%</progress>
+                        <span> 75%</span>
+                    </p>
+                </div>
+                <div class="progrse-div">
+                    <p>
+                        <span class=" h"> Boostap</span>
+                        <progress id="file" value="80" max="100"> 80%</progress>
+                        <span> 80%</span>
+                    </p>
+                </div>
+                <div class="progrse-div">
+                    <p>
+                        <span class=" h"> Javascripr</span>
+                        <progress id="file" value="10" max="100"> 80%</progress>
+                        <span> 10%</span>
+                    </p>
+                </div>
+                <div class="progrse-div">
+                    <p>
+                        <span class=" h"> React</span>
+                        <progress id="file" value="2" max="100"> 80%</progress>
+                        <span> 5%</span>
+                    </p>
+                </div>
+
+                <div class="progrse-div">
+                    <p>
+                        <span class=" h"> Node</span>
+                        <progress id="file" value="5" max="100"> 80%</progress>
+                        <span> 5%</span>
+                    </p>
+                </div>
+
+                
+
+            </div>
+        </div>
+
+    </section>
 
 </body>
 
