--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
           <div class="form-figth " >
               <h1 style=" color:white;"> Contact Us</h1>
               <form action="">
-                  <input type=" text"><br>
-                  <input type=" Email"><br>
-                  <textarea style=" width:300px; margin-top:9px; outline: none;  display: block; border-radius: 10px;margin-bottom:20px;" name="" id="" cols="30" rows="10"></textarea>
+                  <input type=" text" placeholder='type your name'><br>
+                  <input type=" Email"placeholder =" type your email" ><br>
+                  <textarea placeholder=" type message" style=" width:300px; margin-top:9px; outline: none;  display: block; border-radius: 10px;margin-bottom:20px;" name="" id="" cols="30" rows="10"></textarea>
                   <a href="#" class="btn k"> Submit</a>
               </form>
           </div>
